--- a/plugin.properties
+++ b/plugin.properties
@@ -23,8 +23,12 @@ MSVL.File.New.Property.Description = Create a new MSVL Property File
 MSVL.Builder.Console = MSVL Builder Console
 
 MSVL.ActionSet.Build = MSVL Build ActionSet
-MSVL.Build = Build
-MSVL.Build.Tooltip = Build MSVL Project
+
+MSVL.Build.S = Build-S
+MSVL.Build.Tooltip.S = Simulation Build
+MSVL.Build.M = Build-M
+MSVL.Build.Tooltip.M = Modeling Build
+
 MSVL.Clean = Clean
 MSVL.Clean.Tooltip = Clean MSVL Project
 
@@ -39,21 +43,31 @@ MSVL.ActionSet.Convert.VHDL.Tooltip = Convert VHDL to MSVL
 
 MSVL.ActionSet.ModelChecker = Model Checker ActionSet
 MSVL.ActionSet.ModelChecker.Menu = Checker
-MSVL.ActionSet.ModelChecker.PMC = Parallel Model Checker
-MSVL.ActionSet.ModelChecker.PMC.Tooltip = Parallel Model Checker
-MSVL.ActionSet.ModelChecker.UMC = Unified Model Checker
-MSVL.ActionSet.ModelChecker.UMC.Tooltip = Unified Model Checker
+
+MSVL.ActionSet.ModelChecker.PMC.S = PMC-S
+MSVL.ActionSet.ModelChecker.PMC.S.Tooltip = Parallel Model Checker based Simulation
+MSVL.ActionSet.ModelChecker.PMC.M = PMC-M
+MSVL.ActionSet.ModelChecker.PMC.M.Tooltip = Parallel Model Checker based Modeling
+
+MSVL.ActionSet.ModelChecker.UMC.S = UMC-S
+MSVL.ActionSet.ModelChecker.UMC.S.Tooltip = Unified Model Checker based Simulation
+MSVL.ActionSet.ModelChecker.UMC.M = UMC-M
+MSVL.ActionSet.ModelChecker.UMC.M.Tooltip = Unified Model Checker based Modeling
 
 MSVL.LaunchConfig.Name = MSVL Application
 MSVL.LaunchConfig.Delegate.Name = MSVL Application Launch Tooling
 MSVL.LaunchConfig.Delegate.Description = This MSVL tooling will run or debug MSVL code.
 
-MSVL.LaunchShortcut.Name = MSVL Application
-MSVL.ParallelModelChecker.Shortcut.Name = Parallel Model Checking
-MSVL.UnifiedModelChecker.Shortcut.Name = Unified Model Checking
+MSVL.LaunchShortcut.Name.Simulation = Simulation
+MSVL.LaunchShortcut.Name.Modeling = Modeling
+
+MSVL.ParallelModelChecker.Shortcut.Name.Simulation = PMC-Simulation
+MSVL.ParallelModelChecker.Shortcut.Name.Modeling = PMC-Modeling
+
+MSVL.UnifiedModelChecker.Shortcut.Name.Simulation = UMC-Simulation
+MSVL.UnifiedModelChecker.Shortcut.Name.Modeling = UMC-Modeling
 
 MSVL.LaunchConfigurationTabGroups.Run.Description = Create a configuration that will launch a MSVL application.
-MSVL.LaunchConfigurationTabGroups.Debug.Description = Create a configuration that will debug a MSVL application.
 MSVL.LaunchConfigurationTabGroups.PMC.Description = Create a configuration that will check a MSVL application via Parallel Model Checker.
 MSVL.LaunchConfigurationTabGroups.UMC.Description = Create a configuration that will check a MSVL application via Unified Model Checker.
 
