--- a/plugin.properties
+++ b/plugin.properties
@@ -58,6 +58,10 @@ MSVL.LaunchConfig.Name = MSVL Application
 MSVL.LaunchConfig.Delegate.Name = MSVL Application Launch Tooling
 MSVL.LaunchConfig.Delegate.Description = This MSVL tooling will run or debug MSVL code.
 
+MSVL.Convert.LaunchShortcut.Name.c = Convert to MSVL
+MSVL.Convert.LaunchShortcut.Name.VHDL = Convert to MSVL
+MSVL.Convert.LaunchShortcut.Name.Verilog = Convert to MSVL
+
 MSVL.LaunchShortcut.Name.Simulation = Simulation
 MSVL.LaunchShortcut.Name.Modeling = Modeling
 
