Add some wizards - 2017-3-26

--- a/plugin.properties
+++ b/plugin.properties
@@ -1,13 +1,24 @@
 
 MSVL = MSVL
 MSVL.Project = MSVL Project
+MSVL.Project.Empty = Empty MSVL Project
+MSVL.Project.C = C to MSVL Project
+MSVL.Project.VHDL = VHDL to MSVL Project
+MSVL.Project.Verilog = Verilog MSVL Project
+
+MSVL.Project.New.Description = Create a new MSVL project
+MSVL.Project.New.Description.Empty = Create a empty MSVL project
+MSVL.Project.New.Description.C = Create a C to MSVL project
+MSVL.Project.New.Description.VHDL = Create a VHDL to MSVL project
+MSVL.Project.New.Description.Verilog = Create a Verilog MSVL project
+
 MSVL.Project.Nature = MSVL Project Nature
 MSVL.Project.Nature.Images.Name = MSVL Project Nature Images
 MSVL.Project.Builder = MSVL Project Builder
 MSVL.Project.PMC.Builder = MSVL Project PMC Builder
 MSVL.Project.UMC.Builder = MSVL Project UMC Builder
 MSVL.Project.Category = MSVL
-MSVL.Project.New.Description = Create a new MSVL project
+
 MSVL.Project.Property.Page.Name = Build and Run
 
 MSVL.File.New.Main = MSVL Main File
